--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,12 +12,12 @@
     "@testing-library/user-event": "^7.1.2",
     "dompurify": "^2.2.6",
     "http-proxy-middleware": "^1.0.6",
-    "node-sass": "^4.14.1",
     "normalize-scss": "^7.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "serve": "^11.3.2",
     "typescript": "^4.1.3"
   },
   "scripts": {
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "sass": "^1.32.8"
   },
-  "homepage": "https://external-hosted-app"
+  "homepage": "http://localhost:5000"
 }
